--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,8 +4,11 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="15"/>
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="MainActivity"
+    <application
+        android:label="@string/app_name" android:icon="@drawable/icon"
+        android:theme="@android:style/Theme.Holo.Light">
+
+        <activity android:name=".MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
