--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,5 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".SubclassActivity"
+                  android:label="@string/app_name">
+                <meta-data
+                        android:name="android.support.PARENT_ACTIVITY"
+                        android:value="com.suqareapps.Shopping_Cart.MainActivity" />
+        </activity>
     </application>
 </manifest>
